--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <div class="DivStyle" style="position:absolute; z-index: 2">
+
+    <div class="DivStyle" style="position:fixed; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
@@ -56,7 +57,7 @@
             crossorigin="anonymous"></script>
     </div>
 
-    <div class="slideshow-container" style="position:absolute; z-index: 0">
+    <div class="slideshow-container" style="position:relative; z-index: 0">
 
         <div class="mySlides">
             <img src="train.jpg" alt="train" style="width:100%">
@@ -110,13 +111,13 @@
             dots[slideIndex - 1].className += " active";
         }
     </script>
+    
+<div class="footer" style="position:relative; z-index: 2">
+  <a href="https://www.instagram.com/ummalta/" target="_blank">
+      <img src="insta.png" alt="insta">
+  </a>
+  BFA Digital Art @2023
+</div>
 
-    <div class="footer" style="position:absolute; z-index: 2">
-        <a href="https://www.instagram.com/ummalta/" target="_blank">
-            <img src="insta.png" alt="insta">
-        </a>
-        BFA Digital Art @2023
-    </div>
 </body>
-
 </html>
