--- a/sponsors.html
+++ b/sponsors.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="DivStyle" style="position:absolute; z-index: 2">
+    <div class="DivStyle" style="position:fixed; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
@@ -55,17 +55,17 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     </div>
-    <div class="sponsors" style="position:absolute; z-index: 0">
+    <div class="sponsors" style="position:relative; z-index: 0">
         </divclass>
-        <img src="sponsors.png" alt="sponsors">
-
+        <img src="sponsors.png" alt="sponsors" width="100%">
     </div>
-    <div class="footer" style="position:absolute; z-index: 2">
+
+    <div class="footer" style="position:relative; z-index: 2">
         <a href="https://www.instagram.com/ummalta/" target="_blank">
             <img src="insta.png" alt="insta">
         </a>
         BFA Digital Art @2023
-    </div>
-</body>
-
-</html>
+      </div>
+      
+      </body>
+      </html>
