--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 id="background">
 
 
-    <div class="DivStyle" style="position:fixed; z-index: 2">
+    <div class="DivStyle" style="position:absolute; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
