--- a/clive_rotin.html
+++ b/clive_rotin.html
@@ -46,6 +46,9 @@ id="background">
               </ul>
           </div>
   </nav>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"></script>
 
 <h2>Ornate & Elaborate Designs in Gharb</h2>
 
@@ -88,6 +91,22 @@ id="background">
   <div class="gallery">
   <a target="_blank" href="cli (4).png">
     <img src="cli (4).png">
+  </div>
+</a>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+  <a target="_blank" href="cli (2).png">
+    <img src="cli (2).png">
+  </div>
+</a>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+  <a target="_blank" href="image0.png">
+    <img src="image0.png">
   </div>
 </a>
 </div>
