--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="DivStyle" style="position:absolute; z-index: 2">
+    <div class="DivStyle" style="position:relative; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
@@ -49,13 +49,12 @@
                     </ul>
                 </div>
         </nav>
-
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    </div>
-    <div class="form" style="position:absolute; z-index: 0">
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+        </div>
+
+    <div class="form" style="position:relative; z-index: 0">
 
         <div class="container">
             <form action="/action_page.php">
@@ -79,7 +78,7 @@
 
 </div>
 
-<div class="footer" style="position:absolute; z-index: 2">
+<div class="footer" style="position:relative; z-index: 2">
     <a href="https://www.instagram.com/ummalta/" target="_blank">
         <img src="insta.png" alt="insta">
     </a>
