--- a/deborah_buhagiar.html
+++ b/deborah_buhagiar.html
@@ -46,6 +46,9 @@ id="background">
               </ul>
           </div>
   </nav>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"></script>
 
 <h2>Creating an event application prototype</h2>
 
@@ -60,6 +63,22 @@ id="background">
 <br>
 </div>
      
+<div class="responsive">
+  <div class="gallery">
+  <a target="_blank" href="image0.png">
+    <img src="image0.png">
+  </div>
+</a>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+  <a target="_blank" href="image0.png">
+    <img src="image0.png">
+  </div>
+</a>
+</div>
+
 <div class="responsive">
   <div class="gallery">
   <a target="_blank" href="image0.png">
