--- a/gallery.html
+++ b/gallery.html
@@ -4,48 +4,52 @@
 <meta charset="utf-8">
 <title>Gallery</title>
 <link href="Style.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
 <body
 
 id="background">
 
 
-    <div class="DivStyle" style="position:absolute; z-index: 2">
+<div class="DivStyle" style="position:relative; z-index: 2">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-            <div class="container-fluid">
-                <a class="navbar-brand"
-                    href="index.html"
-                    target="_self" style="color: #33704E;"><img src="bfa.png" alt="bfa"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="exhibition.html"
-                                style="color: #33704E; background-color: #33704e00; ">Exhibition</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="gallery.html"
-                                style="color: #33704E;background-color: #33704e00;">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="contact.html"
-                                style="color: #33704E;background-color: #33704e00;">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                                href="sponsors.html"
-                                target="_self" style="color: #33704E;background-color: #33704e00;">Sponsors</a>
-                        </li>
-                    </ul>
-                </div>
-        </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+      <div class="container-fluid">
+          <a class="navbar-brand"
+              href="index.html"
+              target="_self" style="color: #33704E;"><img src="bfa.png" alt="bfa"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+              aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="exhibition.html"
+                          style="color: #33704E; background-color: #33704e00; ">Exhibition</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="gallery.html"
+                          style="color: #33704E;background-color: #33704e00;">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="contact.html"
+                          style="color: #33704E;background-color: #33704e00;">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page"
+                          href="sponsors.html"
+                          target="_self" style="color: #33704E;background-color: #33704e00;">Sponsors</a>
+                  </li>
+              </ul>
+          </div>
+  </nav>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"></script>
 
 <h2>Gallery</h2>
 
@@ -171,11 +175,13 @@ id="background">
 </div>
 </div>
 
+</div>
+
 <div class="clearfix"></div>
 
 <br>
 <br>
-<div class="footer" style="position:absolute; z-index: 2">
+<div class="footer" style="position:relative; z-index: 2">
   <a href="https://www.instagram.com/ummalta/" target="_blank">
       <img src="insta.png" alt="insta">
   </a>
