--- a/exhibition.html
+++ b/exhibition.html
@@ -16,7 +16,7 @@
 
 <body> 
    
-    <div class="DivStyle" style="position:fixed; z-index: 2">
+    <div class="DivStyle" style="position:relative; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
@@ -67,7 +67,7 @@
         <div class="mySlides">
             <img src="expo3.png" alt="3d" style="width:100%">
         </div>
-<div class="body">
+<div class="body" style="padding: 12px;">
     <h1> BFA Exhibition 2023</h1>
     <p> This art exhibition finalises the three academic years of the students at the BFA of Digital Arts. Following these three long years spent in readjustment between the virtual and the physical, overcoming difficult circumstances, this exhibition marks the amalgamation of their growth. Featuring 21 different dissertation projects, ranging across a variety of themes and disciplines, this is now the lasting impression which they want to leave.
  </p>
@@ -75,7 +75,7 @@
    <a class="prev" onclick="plusSlides(-1)">❮</a>
    <a class="next" onclick="plusSlides(1)">❯</a>
 
-        <div style="text-align:center; position:relative; margin-top:-50px;">
+        <div style="text-align:center; position:relative;">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -113,7 +113,7 @@
         }
         
     </script>
-    
+    </div>
 
     <div class="footer" style="position:relative; z-index: 2">
         <a href="https://www.instagram.com/ummalta/" target="_blank">
@@ -121,7 +121,7 @@
         </a>
         BFA Digital Art @2023
       </div>
-</body>
 
+</body>
 </html>
 
