--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="DivStyle" style="position:fixed; z-index: 2">
+    <div class="DivStyle" style="position:relative; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
