--- a/sponsors.html
+++ b/sponsors.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="DivStyle" style="position:fixed; z-index: 2">
+    <div class="DivStyle" style="position:relative; z-index: 2">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
